--- a/个人作业1.md
+++ b/个人作业1.md
@@ -1,7 +1,7 @@
 个人作业1
 =========
 
-要求：
+#### 要求：
 
 讨论projects、programs和portfolie之间的关系以及对企业成功的贡献；以及与operations以及OPM之间的关系。
 
@@ -40,7 +40,7 @@
 
 ##### 三者图解
 
-![image-20200502133649469](img/image-20200502133649469.png)
+![1](./img/1.png)
 
 从组织的角度来看项目、项目集和项目组合管理：
 
