--- a/个人作业3.md
+++ b/个人作业3.md
@@ -5,11 +5,11 @@
 
 参考课件：
 
-![](img/2020-05-19 213335.jpg)
+![](img/213335.jpg)
 
-![](img/2020-05-19 213351.jpg)
+![](img/213351.jpg)
 
-![](img/2020-05-19 213415.jpg)
+![](img/213415.jpg)
 
 可知：
 
