--- a/个人作业3.md
+++ b/个人作业3.md
@@ -5,18 +5,18 @@
 
 参考课件：
 
-![](img/213335.jpg)
+![213335](img/213335.jpg)
 
-![](img/213351.jpg)
+![213351](img/213351.jpg)
 
-![](img/213415.jpg)
+![213415](img/213415.jpg)
 
 可知：
 
 |                |                        项目规划过程组                        |                        SG1                         |                             SG2                              |                       SG3                        |
 | :------------: | :----------------------------------------------------------: | :------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------: |
 |  项目整合管理  |                       制定项目管理计划                       | 建立估计计划：<br>建立和维护项目计划参数的估计数据 | 开发项目计划：<br>要建立和维护项目计划，并作为管理项目的基础 | 获得对计划的承诺：<br>建立和维护对项目计划的承诺 |
-|  项目范围管理  |      规划项目管理<br >收集需求<br >定义范围<br >创建WBS      |        估计项目的范围<br>建立项目属性的估计        |                                                              |                                                  |
+|  项目范围管理  |       规划项目管理<br >收集需求<br>定义范围<br>创建WBS       |        估计项目的范围<br>建立项目属性的估计        |                                                              |                                                  |
 |  项目进度管理  | 规划进度管理<br>定义活动<br>排列活动顺序<br>估算活动持续时间<br>制定进度计划 |                  定义项目生命周期                  |                           建立进度                           |                                                  |
 |  项目成本管理  |             规划成本管理<br>估算成本<br>制定预算             |               确定工作量和成本的估计               |                           建立预算                           |                                                  |
 |  项目质量管理  |                         规划质量管理                         |                                                    |                                                              |                                                  |
@@ -31,7 +31,9 @@
 
 基本上，项目管理过程组与行业过程都是把整个项目划分为多个module，能足够覆盖十大知识领域的同时也便于管理。区别在于，项目管理过程组在子模块内容相对独立的同时又能层层递进，时间上有明显的推进；而行业过程的独立性不明显，联系性强，不同模块之间完全可以相互交叉。
 
-2 阅读JWD案例的前期准备任务，结合创新项目实践，构建软件项目创新竞赛项目准备过程（组），该过程（组）目标交付物为Business Case。
+
+
+**2 阅读JWD案例的前期准备任务，结合创新项目实践，构建软件项目创新竞赛项目准备过程（组），该过程（组）目标交付物为Business Case。**
 
 项目准备过程：
 
@@ -45,6 +47,8 @@
 
 综上，即为软件项目创新竞赛项目准备过程（组）的内容。
 
-**参考内容：**
+
+
+**3 参考内容：**
 
 http://www.uml.org.cn/cmm/200902041.asp
