--- a/个人作业3.md
+++ b/个人作业3.md
@@ -1,7 +1,7 @@
 个人作业3
 =========
 
-**1 了解CMMI项目管理过程 - 项目计划（PP），使用知识域*过程矩阵对比项目规划过程组与CMMI - PP过程**
+#### **1 了解CMMI项目管理过程 - 项目计划（PP），使用知识域*过程矩阵对比项目规划过程组与CMMI - PP过程**
 
 参考课件：
 
@@ -31,9 +31,7 @@
 
 基本上，项目管理过程组与行业过程都是把整个项目划分为多个module，能足够覆盖十大知识领域的同时也便于管理。区别在于，项目管理过程组在子模块内容相对独立的同时又能层层递进，时间上有明显的推进；而行业过程的独立性不明显，联系性强，不同模块之间完全可以相互交叉。
 
-
-
-**2 阅读JWD案例的前期准备任务，结合创新项目实践，构建软件项目创新竞赛项目准备过程（组），该过程（组）目标交付物为Business Case。**
+#### **2 阅读JWD案例的前期准备任务，结合创新项目实践，构建软件项目创新竞赛项目准备过程（组），该过程（组）目标交付物为Business Case。**
 
 项目准备过程：
 
@@ -49,6 +47,6 @@
 
 
 
-**3 参考内容：**
+#### **3 参考内容：**
 
 http://www.uml.org.cn/cmm/200902041.asp
