--- a/个人作业4.md
+++ b/个人作业4.md
@@ -14,11 +14,11 @@
 
 #### 1 项目章程
 
-![image-20200602213518400](/home/wucp/桌面/IT项目管理Blog/img/image-20200602213518400.png)
+![image-20200602213518400](img/image-20200602213518400.png)
 
 #### 2 项目管理计划
 
-![image-20200602213753821](/home/wucp/桌面/IT项目管理Blog/img/image-20200602213753821.png)
+![image-20200602213753821](img/image-20200602213753821.png)
 
 #### 3 WBS(Work Breakdown Structure)
 
