--- a/个人作业4.md
+++ b/个人作业4.md
@@ -8,19 +8,19 @@
 选题1
 -----
 
-**题目**
+### **题目**
 
 你联合同学做一个年级微信公众号加强各班相互了解、联合活动等。请编制**项目章程**和**项目管理计划**，指导该项目实施与运营。必须包含WBS和甘特图。
 
-#### 1 项目章程
+### 1 项目章程
 
 ![image-20200602213518400](img/image-20200602213518400.png)
 
-#### 2 项目管理计划
+### 2 项目管理计划
 
 ![image-20200602213753821](img/image-20200602213753821.png)
 
-#### 3 WBS(Work Breakdown Structure)
+### 3 WBS(Work Breakdown Structure)
 
 首先总结一下WBS的关键概念：
 
@@ -35,26 +35,26 @@
 
 ![image-20200602211721816](img/image-20200602211721816.png)
 
-#### 4 甘特图
+### 4 甘特图
 
 ![image-20200602213335067](img/image-20200602213335067.png)
 
 选题3
 -----
 
-#### 题目
+### 题目
 
 召开一个**项目策划研讨会**，每个人用思维导图记录会议内容，该图必须满足“**话题跟踪、热点标注、要点排序、问题汇总**”四个基本要求。最后，给出这样会议记录的优点与缺点。
 
-#### 项目选题
+### 项目选题
 
 学生活动中心管理系统开发项目 
 
-#### 项目背景
+### 项目背景
 
 纸质化管理学生活动中心多有不便，且不完善，需开发一个管理系统以便工作，故召开一个项目策划研讨会。
 
-#### 思维导图
+### 思维导图
 
 ![image-20200602224450904](img/image-20200602224450904.png)
 
