--- a/个人作业5.md
+++ b/个人作业5.md
@@ -50,7 +50,7 @@
 
 ### WBS
 
-![image-20200616202548307](/home/wucp/.config/Typora/typora-user-images/image-20200616202548307.png)
+![image-20200616202548307](img/image-20200616202548307.png)
 
 检查可知，分配粒度遵循：可以分配、可以交付。能够实现管理项目进度和成本控制的基础（可管理性），每一层子任务也100%覆盖它的上一层任务，可见分解完整，符合要求。
 
